--- a/app/index.html
+++ b/app/index.html
@@ -32,21 +32,21 @@
             <input type="text" class="mailing-list__input" placeholder="Your email address">
             <input type="submit" class="mailing-list__submit" value="Sign up">
           </form>
+          <header class="startups__header">
+            <div class="startup__column_name">
+              <small>Name</small>
+            </div>
+          </header>
         </div>
       </header>
       <section class="main__content">
-        <table>
-          <thead>
-            <tr>
-              <th>Header</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Item</td>
-            </tr>
-          </tbody>
-        </table>
+        <ul class="startups">
+          <li class="startup">
+            <div class="startup__column_name">
+              <strong>Startup</strong>
+            </div>
+          </li>
+        </ul>
       </section>
       <footer class="main__footer">
         Footer
