Finish up header and button styling

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
           <h1 class="brand__title">Fantasy Startup</h1>
           <p class="brand__description">Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac.</p>
           <form class="mailing-list">
-            <p class="mainling-list__description">Nullam in dui mauris</p>
+            <p class="mailing-list__description">Nullam in dui mauris</p>
             <input type="text" class="mailing-list__input" placeholder="Your email address">
             <input type="submit" class="mailing-list__submit" value="Sign up">
           </form>
@@ -58,7 +58,12 @@
               <td>Andrew Liebchen</td>
               <td>$300,000</td>
               <td>$10,000/day</td>
-              <td><button>invest</button></td>
+              <td>
+                <button>
+                  invest
+                  <span>3</span>
+                </button>
+              </td>
             </tr>
             <tr>
               <td>
@@ -71,14 +76,16 @@
               <td>Andrew Liebchen</td>
               <td>$300,000</td>
               <td>$10,000/day</td>
-              <td><button>invest</button></td>
+              <td>
+                <button>
+                  invest
+                  <span>0</span>
+                </button>
+              </td>
             </tr>
           </tbody>
         </table>
       </section>
-      <footer class="main__footer">
-        Footer
-      </footer>
     </div>
 
 
