--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,10 @@
   </head>
   <body>
     <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">
+        You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+      </p>
     <![endif]-->
-
 
     <div class="main">
       <header class="main__header">
@@ -88,6 +89,9 @@
       </section>
     </div>
 
+    <aside class="panel">
+      <h3>Startup Name</h3>
+    </aside>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
