Flesh out panel

--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,68 @@
     </div>
 
     <aside class="panel">
-      <h3>Startup Name</h3>
+      <header class="panel__title">
+        <div class="startup-logo">✌</div>
+        <h2>Startup Name</h2>
+        Uber for startups
+      </header>
+      <div class="scroll-container">
+        <div class="panel__content">
+          <p>
+            Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.
+          </p>
+          <dl>
+            <dt>Tech</dt>
+            <dd>Web app</dd>
+          </dl>
+          <dl>
+            <dt>HQ location</dt>
+            <dd>San Francisco, CA</dd>
+          </dl>
+          <dl>
+            <dt>Founder</dt>
+            <dd>Andrew Liebchen</dd>
+          </dl>
+        </div>
+        <div class="panel__content">
+          <h3>Team</h3>
+          <table>
+            <thead>
+              <tr>
+                <th>Position</th>
+                <th>Value</th>
+                <th>Salary</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>CEO</th>
+                <td>High value</td>
+                <td>$300,000</td>
+              </tr>
+              <tr>
+                <th>CTO</th>
+                <td>High value</td>
+                <td>$300,000</td>
+              </tr>
+              <tr>
+                <th>Lead Engineer</th>
+                <td>High value</td>
+                <td>$300,000</td>
+              </tr>
+              <tr>
+                <th>Designer</th>
+                <td>High value</td>
+                <td>$300,000</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="panel__content">
+          <h3>Expenses</h3>
+
+        </div>
+      </div>
     </aside>
 
     <!-- build:js(.) scripts/vendor.js -->
