Finish panel and split up stylesheets

--- a/app/index.html
+++ b/app/index.html
@@ -100,18 +100,36 @@
           <p>
             Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.
           </p>
-          <dl>
-            <dt>Tech</dt>
-            <dd>Web app</dd>
-          </dl>
-          <dl>
-            <dt>HQ location</dt>
-            <dd>San Francisco, CA</dd>
-          </dl>
-          <dl>
-            <dt>Founder</dt>
-            <dd>Andrew Liebchen</dd>
-          </dl>
+          <div class="clearfix">
+            <div class="column">
+              <dl>
+                <dt>Stage</dt>
+                <dd>Seed</dd>
+              </dl>
+              <dl>
+                <dt>Daily expenses</dt>
+                <dd>$2,969</dd>
+              </dl>
+              <dl>
+                <dt>Cash on hand</dt>
+                <dd>$30,000</dd>
+              </dl>
+            </div>
+            <div class="column">
+              <dl>
+                <dt>Tech</dt>
+                <dd>Web app</dd>
+              </dl>
+              <dl>
+                <dt>HQ location</dt>
+                <dd>San Francisco, CA</dd>
+              </dl>
+              <dl>
+                <dt>Founder</dt>
+                <dd>Andrew Liebchen</dd>
+              </dl>
+            </div>
+          </div>
         </div>
         <div class="panel__content">
           <h3>Team</h3>
@@ -149,9 +167,38 @@
         </div>
         <div class="panel__content">
           <h3>Expenses</h3>
-
+          <table>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>$0</td>
+                <td>$30,000</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>$2,969</td>
+                <td>$27,031</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>$5,939</td>
+                <td>$24,061</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>--</td>
+                <td>--</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
+      <footer class="panel__footer">
+        <button>
+          invest
+          <span>0</span>
+        </button>
+      </footer>
     </aside>
 
     <!-- build:js(.) scripts/vendor.js -->
