--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
               <th>Name</th>
               <th>Founder</th>
               <th>Cash on Hand</th>
+              <th>Expenses</th>
               <th>Burndown</th>
               <th></th>
             </tr>
@@ -58,6 +59,12 @@
               <td>Andrew Liebchen</td>
               <td>$300,000</td>
               <td>$10,000/day</td>
+              <td>
+                <div class="progress">
+                  <div class="progress__fill" style="width:33%"></div>
+                  <div class="progress__marker" style="width:50%"></div>
+                </div>
+              </td>
               <td>
                 <button>
                   invest
@@ -76,6 +83,12 @@
               <td>Andrew Liebchen</td>
               <td>$300,000</td>
               <td>$10,000/day</td>
+              <td>
+                <div class="progress">
+                  <div class="progress__fill" style="width:33%"></div>
+                  <div class="progress__marker" style="width:50%"></div>
+                </div>
+              </td>
               <td>
                 <button>
                   invest
