Panel click catcher

--- a/app/index.html
+++ b/app/index.html
@@ -219,6 +219,7 @@
         </button>
       </footer>
     </aside>
+    <div class="panel__background"></div>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
