--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
           <tbody>
             <tr data-toggle="panel">
               <td>
-                <div class="startup-logo">✌</div>
+                <div class="startup-logo" data-icon="armchair-chair"></div>
               </td>
               <td class="stacked">
                 <strong>Startup Name</strong>
@@ -68,13 +68,13 @@
               <td>
                 <button>
                   invest
-                  <span>3</span>
+                  <span class="button__count">3</span>
                 </button>
               </td>
             </tr>
             <tr>
               <td>
-                <div class="startup-logo">✄</div>
+                <div class="startup-logo" data-icon="barbecue-eat-food"></div>
               </td>
               <td class="stacked">
                 <strong>Startup Name</strong>
@@ -92,7 +92,7 @@
               <td>
                 <button>
                   invest
-                  <span>0</span>
+                  <span class="button__count">0</span>
                 </button>
               </td>
             </tr>
@@ -103,7 +103,7 @@
 
     <aside class="panel">
       <header class="panel__title">
-        <div class="startup-logo">✌</div>
+        <div class="startup-logo" data-icon="umbrella-weather"></div>
         <h2>Startup Name</h2>
         Uber for startups
       </header>
@@ -215,7 +215,7 @@
       <footer class="panel__footer">
         <button>
           invest
-          <span>0</span>
+          <span class="button__count">0</span>
         </button>
       </footer>
     </aside>
