--- a/app/index.html
+++ b/app/index.html
@@ -1,244 +1,275 @@
 <!doctype html>
 <html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title>fantasy startup</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
-      </p>
-    <![endif]-->
+<head>
+  <meta charset="utf-8">
+  <title>fantasy startup</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <!-- build:css(.) styles/vendor.css -->
+  <!-- endbuild -->
+  <!-- build:css(.tmp) styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css">
+  <!-- endbuild -->
+</head>
 
-    <div class="main">
-      <header class="main__header">
-        <div class="main__header__wrapper">
-          <h1 class="brand__title">Fantasy Startup</h1>
-          <p class="brand__description">Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac.</p>
-          <!-- <form class="mailing-list">
-            <p class="mailing-list__description">Nullam in dui mauris</p>
-            <input type="text" class="mailing-list__input" placeholder="Your email address">
-            <input type="submit" class="mailing-list__submit" value="Sign up">
-          </form> -->
+<body>
+  <!--[if lt IE 10]>
+    <p class="browsehappy">
+      You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+    </p>
+  <![endif]-->
+
+  <div class="main">
+    <header class="main__header">
+      <div class="main__header__wrapper">
+        <h1 class="brand__title">Fantasy Startup</h1>
+        <p class="brand__description">Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac.</p>
+        <!-- <form class="mailing-list">
+          <p class="mailing-list__description">Nullam in dui mauris</p>
+          <input type="text" class="mailing-list__input" placeholder="Your email address">
+          <input type="submit" class="mailing-list__submit" value="Sign up">
+        </form> -->
+      </div>
+    </header>
+    <section class="main__content">
+      <table class="startups">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Founder</th>
+            <th>Cash on Hand</th>
+            <th>Expenses</th>
+            <th>Burndown</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr data-toggle="panel">
+            <td>
+              <div class="startup-logo" data-icon="armchair-chair"></div>
+            </td>
+            <td class="stacked">
+              <strong>Startup Name</strong>
+              <small>Uber for startups</small>
+            </td>
+            <td>Andrew Liebchen</td>
+            <td>$300,000</td>
+            <td>$10,000/day</td>
+            <td>
+              <div class="progress">
+                <div class="progress__fill" style="width:33%"></div>
+                <div class="progress__marker" style="width:50%"></div>
+              </div>
+            </td>
+            <td>
+              <button>
+                invest
+                <span class="button__count">3</span>
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <div class="startup-logo" data-icon="barbecue-eat-food"></div>
+            </td>
+            <td class="stacked">
+              <strong>Startup Name</strong>
+              <small>Uber for startups</small>
+            </td>
+            <td>Andrew Liebchen</td>
+            <td>$300,000</td>
+            <td>$10,000/day</td>
+            <td>
+              <div class="progress">
+                <div class="progress__fill" style="width:33%"></div>
+                <div class="progress__marker" style="width:50%"></div>
+              </div>
+            </td>
+            <td>
+              <button>
+                invest
+                <span class="button__count">0</span>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+  </div>
+
+  <aside class="panel">
+    <header class="panel__title">
+      <div class="startup-logo" data-icon="umbrella-weather"></div>
+      <h2>Startup Name</h2>
+      Uber for startups
+    </header>
+    <div class="scroll-container">
+      <div class="panel__content">
+        <p>
+          Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.
+        </p>
+        <div class="clearfix">
+          <div class="column">
+            <dl>
+              <dt>Stage</dt>
+              <dd>Seed</dd>
+            </dl>
+            <dl>
+              <dt>Daily expenses</dt>
+              <dd>$2,969</dd>
+            </dl>
+            <dl>
+              <dt>Cash on hand</dt>
+              <dd>$30,000</dd>
+            </dl>
+          </div>
+          <div class="column">
+            <dl>
+              <dt>Tech</dt>
+              <dd>Web app</dd>
+            </dl>
+            <dl>
+              <dt>HQ location</dt>
+              <dd>San Francisco, CA</dd>
+            </dl>
+            <dl>
+              <dt>Founder</dt>
+              <dd>Andrew Liebchen</dd>
+            </dl>
+          </div>
         </div>
-      </header>
-      <section class="main__content">
-        <table class="startups">
+      </div>
+      <div class="panel__content">
+        <h3>Team</h3>
+        <table>
           <thead>
             <tr>
-              <th></th>
-              <th>Name</th>
-              <th>Founder</th>
-              <th>Cash on Hand</th>
-              <th>Expenses</th>
-              <th>Burndown</th>
-              <th></th>
+              <th>Position</th>
+              <th>Value</th>
+              <th>Salary</th>
             </tr>
           </thead>
           <tbody>
-            <tr data-toggle="panel">
-              <td>
-                <div class="startup-logo" data-icon="armchair-chair"></div>
-              </td>
-              <td class="stacked">
-                <strong>Startup Name</strong>
-                <small>Uber for startups</small>
-              </td>
-              <td>Andrew Liebchen</td>
+            <tr>
+              <th>CEO</th>
+              <td>High value</td>
               <td>$300,000</td>
-              <td>$10,000/day</td>
-              <td>
-                <div class="progress">
-                  <div class="progress__fill" style="width:33%"></div>
-                  <div class="progress__marker" style="width:50%"></div>
-                </div>
-              </td>
-              <td>
-                <button>
-                  invest
-                  <span class="button__count">3</span>
-                </button>
-              </td>
             </tr>
             <tr>
-              <td>
-                <div class="startup-logo" data-icon="barbecue-eat-food"></div>
-              </td>
-              <td class="stacked">
-                <strong>Startup Name</strong>
-                <small>Uber for startups</small>
-              </td>
-              <td>Andrew Liebchen</td>
+              <th>CTO</th>
+              <td>High value</td>
               <td>$300,000</td>
-              <td>$10,000/day</td>
-              <td>
-                <div class="progress">
-                  <div class="progress__fill" style="width:33%"></div>
-                  <div class="progress__marker" style="width:50%"></div>
-                </div>
-              </td>
-              <td>
-                <button>
-                  invest
-                  <span class="button__count">0</span>
-                </button>
-              </td>
+            </tr>
+            <tr>
+              <th>Lead Engineer</th>
+              <td>High value</td>
+              <td>$300,000</td>
+            </tr>
+            <tr>
+              <th>Designer</th>
+              <td>High value</td>
+              <td>$300,000</td>
             </tr>
           </tbody>
         </table>
-      </section>
-    </div>
-
-    <aside class="panel">
-      <header class="panel__title">
-        <div class="startup-logo" data-icon="umbrella-weather"></div>
-        <h2>Startup Name</h2>
-        Uber for startups
-      </header>
-      <div class="scroll-container">
-        <div class="panel__content">
-          <p>
-            Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus.
-          </p>
-          <div class="clearfix">
-            <div class="column">
-              <dl>
-                <dt>Stage</dt>
-                <dd>Seed</dd>
-              </dl>
-              <dl>
-                <dt>Daily expenses</dt>
-                <dd>$2,969</dd>
-              </dl>
-              <dl>
-                <dt>Cash on hand</dt>
-                <dd>$30,000</dd>
-              </dl>
-            </div>
-            <div class="column">
-              <dl>
-                <dt>Tech</dt>
-                <dd>Web app</dd>
-              </dl>
-              <dl>
-                <dt>HQ location</dt>
-                <dd>San Francisco, CA</dd>
-              </dl>
-              <dl>
-                <dt>Founder</dt>
-                <dd>Andrew Liebchen</dd>
-              </dl>
-            </div>
-          </div>
-        </div>
-        <div class="panel__content">
-          <h3>Team</h3>
-          <table>
-            <thead>
-              <tr>
-                <th>Position</th>
-                <th>Value</th>
-                <th>Salary</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th>CEO</th>
-                <td>High value</td>
-                <td>$300,000</td>
-              </tr>
-              <tr>
-                <th>CTO</th>
-                <td>High value</td>
-                <td>$300,000</td>
-              </tr>
-              <tr>
-                <th>Lead Engineer</th>
-                <td>High value</td>
-                <td>$300,000</td>
-              </tr>
-              <tr>
-                <th>Designer</th>
-                <td>High value</td>
-                <td>$300,000</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="panel__content">
-          <h3>Expenses</h3>
-          <table>
-            <thead>
-              <tr>
-                <th>Week</th>
-                <th>Spent</th>
-                <th>Cash on hand</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>$0</td>
-                <td>$30,000</td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>$2,969</td>
-                <td>$27,031</td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>$5,939</td>
-                <td>$24,061</td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td>--</td>
-                <td>--</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
       </div>
-      <footer class="panel__footer">
-        <button>
-          invest
-          <span class="button__count">0</span>
-        </button>
-      </footer>
-    </aside>
-    <div class="panel__background"></div>
+      <div class="panel__content">
+        <h3>Expenses</h3>
+        <table>
+          <thead>
+            <tr>
+              <th>Week</th>
+              <th>Spent</th>
+              <th>Cash on hand</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>$0</td>
+              <td>$30,000</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>$2,969</td>
+              <td>$27,031</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>$5,939</td>
+              <td>$24,061</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td>--</td>
+              <td>--</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <footer class="panel__footer">
+      <button>
+        invest
+        <span class="button__count">0</span>
+      </button>
+    </footer>
+  </aside>
+  <div class="panel__background"></div>
 
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+  <div id="startups"></div> <!-- TEMP -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+  <!-- build:js(.) scripts/vendor.js -->
+  <!-- bower:js -->
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/tabletop/src/tabletop.js"></script>
+  <script src="bower_components/sheetsee/js/sheetsee.js"></script>
+  <!-- endbower -->
+  <!-- endbuild -->
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
+  <!-- sheetsee -->
+  <script id="startups_template" type="text/html">
+    <table>
+        {{#rows}}
+          <tr><td>{{id}}</td><td>{{name}}</td><td>{{tagline}}</td></tr>
+        {{/rows}}
+    </table>
+  </script>
+
+  <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function() {
+        var gData
+        var URL = "1orGnmev3T59ybT9WkKtzlmuLERL-QYy_3dQgNlVlIpw"
+        Tabletop.init( { key: URL, callback: showStartups, simpleSheet: true } )
+    })
+    function showStartups(data) {
+      console.log(data)
+      var tableOptions = {
+                          "data": data,
+                          "pagination": 10,
+                          "tableDiv": "#statups",
+                          "filterDiv": "#startups_filter",
+                          "templateID": "startups"
+                          }
+      Sheetsee.makeTable(tableOptions)
+    }
+  </script>
+
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+  <script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    e.src='//www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-XXXXX-X');ga('send','pageview');
+  </script>
+
+  <!-- build:js({app,.tmp}) scripts/main.js -->
+  <script src="scripts/main.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
