--- a/app/index.html
+++ b/app/index.html
@@ -86,7 +86,7 @@
               {{founder}}
             {{/if}}
           </td>
-          <td>{{day1}}</td>
+          <td>{{cashonhand}}</td>
           <td>
             {{totaldailyexpenses}}
             <small>/day</small>
@@ -121,29 +121,37 @@
           <div class="column">
             <dl>
               <dt>Stage</dt>
-              <dd>Seed</dd>
+              <dd>{{stage}}</dd>
             </dl>
             <dl>
               <dt>Daily expenses</dt>
-              <dd>$2,969</dd>
+              <dd>{{totaldailyexpenses}}</dd>
             </dl>
             <dl>
               <dt>Cash on hand</dt>
-              <dd>$30,000</dd>
+              <dd>{{cashonhand}}</dd>
             </dl>
           </div>
           <div class="column">
             <dl>
               <dt>Tech</dt>
-              <dd>Web app</dd>
+              <dd>{{tech}}</dd>
             </dl>
             <dl>
               <dt>HQ location</dt>
-              <dd>San Francisco, CA</dd>
+              <dd>{{hqlocation}}</dd>
             </dl>
             <dl>
               <dt>Founder</dt>
-              <dd>Andrew Liebchen</dd>
+              {{#if founderurl}}
+                <dd>
+                  <a href="{{founderurl}}" target="_blank">
+                    {{founder}}
+                  </a>
+                </dd>
+              {{else}}
+                <dd>{{founder}}</dd>
+              {{/if}}
             </dl>
           </div>
         </div>
@@ -155,29 +163,29 @@
             <tr>
               <th>Position</th>
               <th>Value</th>
-              <th>Salary</th>
+              <th>Daily salary</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <th>CEO</th>
-              <td>High value</td>
-              <td>$300,000</td>
+              <td>{{ceotype}}</td>
+              <td>{{ceosalary}}</td>
             </tr>
             <tr>
               <th>CTO</th>
-              <td>High value</td>
-              <td>$300,000</td>
+              <td>{{ctotype}}</td>
+              <td>{{ctosalary}}</td>
             </tr>
             <tr>
               <th>Lead Engineer</th>
-              <td>High value</td>
-              <td>$300,000</td>
+              <td>{{leadengineertype}}</td>
+              <td>{{leadengineersalary}}</td>
             </tr>
             <tr>
               <th>Designer</th>
-              <td>High value</td>
-              <td>$300,000</td>
+              <td>{{designertype}}</td>
+              <td>{{designersalary}}</td>
             </tr>
           </tbody>
         </table>
@@ -187,32 +195,110 @@
         <table>
           <thead>
             <tr>
-              <th>Week</th>
+              <th>Day</th>
               <th>Spent</th>
               <th>Cash on hand</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>1</td>
-              <td>$0</td>
-              <td>$30,000</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>$2,969</td>
-              <td>$27,031</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>$5,939</td>
-              <td>$24,061</td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>--</td>
-              <td>--</td>
-            </tr>
+            {{#if day1expense}}
+              <tr>
+                <td>1</td>
+                <td>{{#if day1expense}}{{day1expense}}{{/if}}</td>
+                <td>{{#if day1cash}}{{day1cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day2expense}}
+              <tr>
+                <td>2</td>
+                <td>{{#if day2expense}}{{day2expense}}{{/if}}</td>
+                <td>{{#if day2cash}}{{day2cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day3expense}}
+              <tr>
+                <td>3</td>
+                <td>{{#if day3expense}}{{day3expense}}{{/if}}</td>
+                <td{{#if day3cash}}{{day3cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day4expense}}
+              <tr>
+                <td>4</td>
+                <td>{{#if day4expense}}{{day4expense}}{{/if}}</td>
+                <td>{{#if day4cash}}{{day4cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day5expense}}
+              <tr>
+                <td>5</td>
+                <td>{{#if day5expense}}{{day5expense}}{{/if}}</td>
+                <td>{{#if day5cash}}{{day5cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day6expense}}
+              <tr>
+                <td>6</td>
+                <td>{{#if day6expense}}{{day6expense}}{{/if}}</td>
+                <td>{{#if day6cash}}{{day6cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day7expense}}
+              <tr>
+                <td>7</td>
+                <td>{{#if day7expense}}{{day7expense}}{{/if}}</td>
+                <td>{{#if day7cash}}{{day7cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day8expense}}
+              <tr>
+                <td>8</td>
+                <td>{{#if day8expense}}{{day8expense}}{{/if}}</td>
+                <td>{{#if day8cash}}{{day8cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day9expense}}
+              <tr>
+                <td>9</td>
+                <td>{{#if day9expense}}{{day9expense}}{{/if}}</td>
+                <td>{{#if day9cash}}{{day9cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day210expense}}
+              <tr>
+                <td>10</td>
+                <td>{{#if day10expense}}{{day10expense}}{{/if}}</td>
+                <td>{{#if day10cash}}{{day10cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day11expense}}
+              <tr>
+                <td>11</td>
+                <td>{{#if day11expense}}{{day11expense}}{{/if}}</td>
+                <td>{{#if day11cash}}{{day11cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day12expense}}
+              <tr>
+                <td>12</td>
+                <td>{{#if day12expense}}{{day12expense}}{{/if}}</td>
+                <td>{{#if day12cash}}{{day12cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day13expense}}
+              <tr>
+                <td>13</td>
+                <td>{{#if day13expense}}{{day13expense}}{{/if}}</td>
+                <td>{{#if day13cash}}{{day13cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
+            {{#if day14expense}}
+              <tr>
+                <td>14</td>
+                <td>{{#if day14expense}}{{day14expense}}{{/if}}</td>
+                <td>{{#if day14cash}}{{day14cash}}{{/if}}</td>
+              </tr>
+            {{/if}}
           </tbody>
         </table>
       </div>
